# mctp-lib

./: .gitignore  .licenserc.yaml  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/echo/: main.rs
examples/mctp-control-endpoint/: README.md  main.rs
src/: lib.rs
src/mctp_control/: codec.rs  mod.rs
standalone/: Cargo.toml
standalone/src/: lib.rs  serial_sender.rs
