[package]
name = "mctp-lib"
version = "0.1.0"
edition = "2024"
authors = ["OpenPRoT Contributors"]
license = "Apache-2.0"
description = "Platform-agnostic MCTP (Management Component Transport Protocol) library for embedded systems"
repository = "https://github.com/rusty1968/mctp-lib"
keywords = ["mctp", "embedded", "no-std", "protocol", "openprot"]
categories = ["embedded", "no-std"]

[features]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true