[package]
name = "mctp-lib"
version = "0.1.0"
edition = "2024"
authors = ["OpenPRoT Contributors"]
license = "Apache-2.0"
description = "Platform-agnostic MCTP (Management Component Transport Protocol) library for embedded systems"
repository = "https://github.com/OpenPRoT/mctp-lib"
keywords = ["mctp", "embedded", "no-std", "protocol", "openprot"]
categories = ["embedded", "no-std"]

[features]

[dependencies]
mctp-estack = { git = "https://github.com/OpenPRoT/mctp-rs.git", branch = "sync-features", default-features = false, features = ["log"] }
mctp = { git = "https://github.com/OpenPRoT/mctp-rs.git", branch = "sync-features", default-features = false }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
